--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
+*
+{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+:root{
+    /* text color */
+    --bcol: #0D6EFD;
+    --dbcol: #1e4888;
+    --success: rgb(0, 255, 102);
+    --successfade: rgba(0, 255, 102, 0.413);
+    --danger: red;
+    --dangerfade: rgba(255, 0, 0, 0.331);
+    --bgfade: rgba(128, 128, 128, 0.032);
+}
