--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -8,3 +8,14 @@
         width: 30%;
     }
 }
+
+@media screen and (max-width: 1200px) {
+    .side
+    {
+        display: none;
+    }
+    /* .router
+    {
+        display: none;
+    } */
+}
