--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -14,8 +14,10 @@
     {
         display: none;
     }
-    /* .router
+}
+@media screen and (max-width: 1200px) {
+    .side
     {
         display: none;
-    } */
+    }
 }
