--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
 
 <div class="container-fluid p-0">
     <div class="d-flex overflow-x-hidden">
-      <div class="col-lg-2 col-md-3 col-sm-4 p-3 vh-100 side position-static">
+      <div class="p-3 vh-100 side position-static">
         <app-sidebar></app-sidebar>
       </div>
-      <div class="router col-lg-10 col-md-9 col-sm-8">
+      <div class="router w-100">
         <router-outlet></router-outlet>
          <!-- <app-home></app-home>
          <app-mybank></app-mybank> -->
